@@ -76,9 +76,10 @@ libisc_la_HEADERS =			\
 	include/isc/rwlock.h		\
 	include/isc/safe.h		\
 	include/isc/serial.h		\
-	include/isc/signal.h\
+	include/isc/signal.h		\
 	include/isc/siphash.h		\
 	include/isc/sockaddr.h		\
+	include/isc/stack.h		\
 	include/isc/stats.h		\
 	include/isc/stdio.h		\
 	include/isc/stdtime.h		\
