@@ -1,3 +1,6 @@
+6108.	[func]		Support for simple lock-free singly-linked stacks.
+			[GL !7470]
+
 6107.	[cleanup]	Remove the dns_sdb API and rewrite the named
 			builtin databases to implement dns_db directly.
 			[GL #3882]
